@startuml Diagramme_Classes
' ═══════════════════════════════════════════════════
'  Diagramme de Classes — Nexora
' ═══════════════════════════════════════════════════

skinparam backgroundColor #FEFEFE
skinparam classAttributeIconSize 0
skinparam linetype ortho

skinparam class {
    BackgroundColor #E8F0FE
    BorderColor #2B6CB0
    FontColor #1A365D
    ArrowColor #2B6CB0
    HeaderBackgroundColor #2B6CB0
    HeaderFontColor #FFFFFF
    StereotypeFontColor #2B6CB0
    AttributeFontColor #2D3748
}

' ── Enumération ──
enum RoleEnum {
    admin
    manager
    user
}

' ── Classe Expert ──
class Expert {
    - id : String
    - name : String
    - email : String
    - department : String
    - role : String
    - location : String
    - experience_years : Integer
    - expertise_level : String
    - hire_date : Date
    - skills : List<String>
    --
    + getSkills() : List<Skill>
    + getProjects() : List<Project>
    + getDocuments() : List<Document>
}

' ── Classe Skill ──
class Skill {
    - id : String
    - name : String
    - category : String
    - level : String
    - demand : Integer
    --
    + getExperts() : List<Expert>
    + getProjects() : List<Project>
}

' ── Classe Project ──
class Project {
    - id : String
    - name : String
    - domain : String
    - status : String
    - priority : String
    - budget : Float
    - tech_stack : List<String>
    - required_skills : List<String>
    --
    + getTeam() : List<Expert>
    + getRequiredSkills() : List<Skill>
}

' ── Classe Document ──
class Document {
    - id : String
    - title : String
    - type : String
    - topic : String
    - content : String
    - author : String
    - date : Date
    - views : Integer
    - rating : Float
    --
    + getAuthor() : Expert
    + classify() : String
}

' ── Classe Topic ──
class Topic {
    - id : String
    - name : String
}

' ── Classe User ──
class User {
    - username : String
    - email : String
    - hashed_password : String
    - role : RoleEnum
    --
    + verifyPassword() : Boolean
    + generateToken() : String
}

' ── Relations ──
Expert "1..*" -- "0..*" Skill : HAS_SKILL >
Expert "1..*" -- "0..*" Project : WORKS_ON >
Expert "1" -- "0..*" Document : AUTHORED >
Expert "0..*" -- "0..*" Expert : KNOWS >
Project "1..*" -- "0..*" Skill : REQUIRES_SKILL >
Document "1..*" -- "0..*" Topic : COVERS_TOPIC >

User --> RoleEnum : role
User "1" -- "1" Expert : profile >

@enduml
